# lateimport

./: .gitattributes  .gitignore  AGENTS.md  LICENSE-Apache-2.0  README.md  _typos.toml  mise.toml  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/lateimport/: __init__.py  _version.py  py.typed
tests/: test_late_import_more.py  test_lateimport.py
