# SPDX-FileCopyrightText: 2026 Knitli Inc.
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
name = "lateimport"
version = "0.1.0"
description = "Lazy import utilities for deferred module loading and attribute access. Truly lazy, truly late."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE-Apache-2.0", "LICENSE-MIT", "LICENSES/*"]
authors = [
  { name = "Knitli Inc." },
  { name = "Adam Poulemanos", email = "adam@knit.li" },
]
keywords = [
  "attribute",
  "deferred",
  "import",
  "lazy",
  "loading",
  "module",
  "proxy",
  "utilities",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/knitli/lateimport"
Repository = "https://github.com/knitli/lateimport"
Issues = "https://github.com/knitli/lateimport/issues"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.version]
path = "src/lateimport/_version.py"
# The reuse statements prevent REUSE from considering this snippet for license compliance, which would error
# REUSE-IgnoreStart
template = '''# SPDX-FileCopyrightText: 2026 Knitli Inc.
# SPDX-License-Identifier: MIT OR Apache-2.0
"""Version information for lateimport."""
from typing import Final


__version__: Final[str] = "{version}"

__all__ = ("__version__",)
'''

[tool.hatch.build.targets.wheel]
packages = ["src/lateimport"]

# REUSE-IgnoreEnd

[tool.pytest.ini_options]
markers = [
  "benchmark: marks tests as benchmark/performance tests",
  "performance: marks tests as performance tests",
  "unit: marks tests as unit tests",
]
minversion = "9.0"
testpaths = ["tests"]
