# SPDX-FileCopyrightText: 2026 Knitli Inc.
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
name = "lateimport"
description = "Lazy import utilities for deferred module loading and attribute access. Truly lazy, truly late."
readme = "README.md"
requires-python = ">=3.12"  # We use parameterized generics, because `Generic` is ugly.
license-files = ["LICENSE-Apache-2.0", "LICENSE-MIT", "LICENSES/*"]
authors = [
  { name = "Knitli Inc." },
  { name = "Adam Poulemanos", email = "adam@knit.li" },
]
keywords = [
  "attribute",
  "deferred",
  "import",
  "lazy",
  "loading",
  "module",
  "proxy",
  "utilities",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/knitli/lateimport"
Issues = "https://github.com/knitli/lateimport/issues"
Repository = "https://github.com/knitli/lateimport"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/lateimport/_version.py"
# The reuse statements prevent REUSE from considering this snippet for license compliance, which would error
# REUSE-IgnoreStart
template = '''# SPDX-FileCopyrightText: 2026 Knitli Inc.
# SPDX-License-Identifier: MIT OR Apache-2.0
"""Version information for lateimport."""
from typing import Final


__version__: Final[str] = "{version}"

__all__ = ("__version__",)
'''

# REUSE-IgnoreEnd
[tool.hatch.build.targets.wheel]
packages = ["src/lateimport"]

[tool.pytest]
markers = [
  "benchmark: marks tests as benchmark/performance tests",
  "performance: marks tests as performance tests",
  "unit: marks tests as unit tests",
]
minversion = "9.0"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "./tests", "./scripts", "./mise-tasks", "./packages"]
python = "./.venv"
extra-paths = ["./typings"]

[tool.ty.rules]
# === Core Type Safety Rules (kept strict for src/) ===
# These remain as errors by default and will catch real bugs in production code

# === Test Framework Limitations ===
# ty doesn't understand pytest mocks/fixtures - these are inherent limitations, not real bugs
possibly-missing-attribute = "ignore"  # Pytest fixtures don't have static attributes
unresolved-attribute = "warn"  # Test mocks may have dynamic attributes
unknown-argument = "warn"  # Pytest fixtures injected dynamically
unresolved-reference = "warn"  # Test references may be dynamic
# === Type Inference Limitations ===
# ty is overly strict with Literal inference in dict lookups and dynamic patterns
invalid-argument-type = "warn"  # Many false positives in capabilities dicts and code gen
missing-typed-dict-key = "warn"  # Often false positive with dynamic TypedDict construction (e.g., **dict comprehension)
# === Style and Refactoring Suggestions ===
redundant-cast = "ignore"  # Informational only, not bugs
# === Optional Dependencies ===
# Scripts may import optional dependencies (e.g., mkdocs_gen_files, black)
unresolved-import = "warn"  # Downgrade to warn for optional dependencies

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
